added background to start page and changed layout in application file

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -221,4 +221,7 @@ min-width: 1045px;
 width:100%;
 transform: scale(1.5);
 -webkit-transform: scale(1.5);
+margin-left: 250px;
+margin-top: 200px;
+opacity: 0.3;
 }
