--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,52 +19,62 @@
   <body>
 
   <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-          <div class="navbar-header">
-            <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-              </button>
-          </div>
-          <center>
-              <div class="navbar-collapse collapse" id="navbar-main">
-                  <ul class="nav navbar-nav navbar-left">
-                    <li><a href="#menu-toggle"><%= link_to "", class: 'active', id: 'menu-toggle' do %>
-                       <i class="glyphicon glyphicon-align-justify"></i>
-                     <% end %></a>
-                     </li>
-                      <li><%= link_to_unless_current('Home', projects_path) {  link_to('Home', projects_path, class: 'active') } %>
-                      </li>
-                  </ul>
-              <a class="navbar-brand">myersBits</a>
-                  <% if current_user %>
-                  <ul class="nav navbar-nav navbar-right">
-                  <li><%= link_to_unless_current('Profile', user_path(current_user.id)) {  link_to('Profile', user_path(current_user.id), class: 'active' ) } %></li>
-                  </ul>
-                  <p class="navbar-text navbar-right"> <%= link_to pluralize(current_user.count_pending_membership_requests, "pending requests"),notification_path(current_user.id)  %></p>
-
-                    <p class="navbar-text navbar-right">Signed in as <%= current_user.name %> <%= link_to "Log out", session_path("current"), :method => :delete %></p>
-                  <% else %>
-                    <%= form_tag "/sessions", method: "POST", class: "navbar-form navbar-right" do |f| %>
-                        <div class="form-group">
-                            <%= text_field_tag :email, params[:email], class: "form-control", placeholder: "Email" %>
-                        </div>
-                        <div class="form-group">
-                            <%= password_field_tag :password, "", class: "form-control", placeholder: "Password" %>
-                        </div>
-
-                        <%= submit_tag "Log in", class: "btn btn-default" %>
-
-
-                        <%= button_to "Sign Up", new_user_path, class: "btn btn-default" %>
-
-                    <% end %>
-                  <% end %>
-                  </form>
-              </div>
-          </center>
+    <div class="container">
+      <div class="navbar-header">
+        <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
       </div>
+      <center>
+        <div class="navbar-collapse collapse" id="navbar-main">
+          <ul class="nav navbar-nav navbar-left">
+            
+            <!-- List item 1 -->
+            <li>
+              <a href="#menu-toggle">
+              <%= link_to "", class: 'active', id: 'menu-toggle' do %>
+                <i class="glyphicon glyphicon-align-justify"></i>
+              <% end %>
+              </a>
+            </li>
+            
+            <!-- List item 2 -->
+            <li>
+              <%= link_to_unless_current('myersBits', projects_path) {  
+                link_to('myersBits', projects_path, class: 'active') 
+              } %>
+            </li>
+
+          </ul>
+            <% if current_user %>
+              <p class="navbar-text navbar-right">
+                <%= link_to pluralize(current_user.count_pending_membership_requests, "pending requests"),notification_path(current_user.id)  %>
+              </p>
+              <p class="navbar-text navbar-right">
+                Signed in as 
+                <%= link_to_unless_current(current_user.name, user_path(current_user.id)) {  
+                  link_to(current_user.name, user_path(current_user.id), class: 'active' ) 
+                } %>
+                <%= link_to "Log out", session_path("current"), :method => :delete %>
+              </p>
+            <% else %>
+              <%= form_tag "/sessions", method: "POST", class: "navbar-form navbar-right" do |f| %>
+                <div class="form-group">
+                  <%= text_field_tag :email, params[:email], class: "form-control", placeholder: "Email" %>
+                </div>
+                <div class="form-group">
+                  <%= password_field_tag :password, "", class: "form-control", placeholder: "Password" %>
+                </div>
+                <%= submit_tag "Log in", class: "btn btn-default" %>
+                <%= button_to "Sign Up", new_user_path, class: "btn btn-default" %>
+              <% end %>
+            <% end %>
+          </form>
+        </div>
+      </center>
+    </div>
   </div>
 
       <div id="wrapper">
