--- a/app/views/projects/startpage.html.erb
+++ b/app/views/projects/startpage.html.erb
@@ -1,9 +1,15 @@
-<h1>Myersbits.</h1>
-<h2>Learn new programming languagesJavascript, HTML, English, do you speak the same language? </h2>
-<h2>Join a team, learn pair programming, learn new skills, </h2>
-<h3>In programming, more heads are better than one.</h3>
-
 <video height="600px" id="hero" autoplay loop preload="auto">
-     <source src="/videos/yourvideo.mp4" media="all and (max-width:480px)">
+     <source src="/videos/myvideo1.mp4" media="all and (max-width:480px)">
      There would be a video here if you had a better browser.
 </video>
+
+<h1 id="hOne">Myersbits.</h1>
+<h2 id="hTwo">Learn new programming languages, learn how to communicate. </h2>
+<h2 id="hThree">Join a team, try pair programming, learn new skills, </h2>
+<h3 id="hFour">In programming, more heads are better than one.</h3>
+
+<script>
+  $(document).ready(function(){
+    $('#hOne').slideDown();
+  });
+</script>
