--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,25 +1,31 @@
 <h1>Members</h1>
 
 <% @users.each do |user| %>
-
 <div class="well">
+
   <p> Name: <%= user.name %> </p>
-  <p> Personality: <%= user.personality.mbti %><br>
-   <%= current_user.where.personality_id = user.relationship.primary_id %><br>
-   <= user.relationship.compatibility.title %>
-   <% user.relationship.compatibility.description %>
+
+  <% if !(current_user == user) %>
+  <p> Personality type: <%= user.personality.mbti %><br>
+  <p> My Personality type: <%= current_user.personality.mbti %></p>
+   <% r = Relationship.where(primary: current_user.personality, secondary: user.personality)%>
+   <% c = Compatibility.where(id: r.first.compatibility_id) %>
+   <% d = c.first %>
+   <p>Your Compatibility with this User: <%= link_to d.title, compatibilities_path %> </p>
+  <% end %>
 
 
-<h2>Working with <%user.personality.mbti%>'s</h2>
-  <%=  "#{user.personality.mbti} at work:"%> <% user.personality.at_work %>
-  <%= "#{user.personality.mbti} in a team:"%> <% user.personality.as_leader %>
-  <%= "#{user.personality.mbti} as a leader:"%> <% user.personality.as_team %>
+   <%#current_user.where.personality_id = user.relationship.primary_id %><br>
+   <%#user.relationship.compatibility.title %>
+   <%# user.relationship.compatibility.description %>
 
-<h2> As a Leader </h2>
-<%= @personality.as_leader %>
 
-<h2> As a Team Member </h2>
-<%= @personality.as_team %>
+<h2> Working with <%= user.personality.mbti%> </h2>
+  <h3> <%=  "#{user.personality.mbti} at work:"%> </h3> <p><%= user.personality.at_work %></p><br>
+  <h3> <%= "#{user.personality.mbti} in a team:"%> </h3> <%= user.personality.as_leader %></p><br>
+  <h3> <%= "#{user.personality.mbti} as a leader:"%> </h3><%= user.personality.as_team %></p><br>
+
+
   <div class="avatar">
   <%= image_tag user.avatar.url(:medium) %> <%= link_to image_tag(user.personality.avatar), personality_path(user.personality.id) %>
   </div>
@@ -27,8 +33,4 @@
 </div>
 <% end %>
 
-user              personality  relationship                                       compatibility         Membershi
-personality_id    mbti         compatibility id, primary id, secondary id         id, title(to display) 
 
-
-team_compatibility_for(current_user)
