changed routes to  personality view

--- a/app/views/personalities/index.html.erb
+++ b/app/views/personalities/index.html.erb
@@ -3,6 +3,7 @@
 
 <% @personalities.each do |personality| %>
 
-<%= link_to image_tag(personality.avatar), personality_path(personality.id) %>
+
+<%= link_to image_tag(personality.avatar), personality_path(personality.mbti) %>
 
 <% end %>
