--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -127,7 +127,7 @@
         <div id="page-content-wrapper">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-lg-10" style="float:right;">
+                    <div class="col-lg-12">
                         <%= yield %>
                     </div>
                 </div>
