--- a/app/views/projects/startpage.html.erb
+++ b/app/views/projects/startpage.html.erb
@@ -2,11 +2,11 @@
      <source src="/videos/myvideo1.mp4" media="all and (max-width:480px)">
      There would be a video here if you had a better browser.
 </video>
+<h1 style="text-align:left;">Myersbits.</h1>
+<h2>Learn new programming languages, learn how to communicate. </h2>
+<h2>Join a team, try pair programming, learn new skills, </h2>
+<h3>In programming, more heads are better than one.</h3>
 
-<h1 id="hOne">Myersbits.</h1>
-<h2 id="hTwo">Learn new programming languages, learn how to communicate. </h2>
-<h2 id="hThree">Join a team, try pair programming, learn new skills, </h2>
-<h3 id="hFour">In programming, more heads are better than one.</h3>
 
 <script>
   $(document).ready(function(){
