changed the startpage

--- a/app/views/projects/startpage.html.erb
+++ b/app/views/projects/startpage.html.erb
@@ -2,14 +2,33 @@
      <source src="/videos/myvideo1.mp4" media="all and (max-width:480px)">
      There would be a video here if you had a better browser.
 </video>
-<h1 style="text-align:left;">Myersbits.</h1>
-<h2>Learn new programming languages, learn how to communicate. </h2>
-<h2>Join a team, try pair programming, learn new skills, </h2>
+<font size="60", style="text-align:left;">Myersbits.</font>
 <h3>In programming, more heads are better than one.</h3>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<h2>Learn how to co{de}communicate based on your personality.</h2>
 
 
-<script>
-  $(document).ready(function(){
-    $('#hOne').slideDown();
-  });
-</script>
+
