--- a/app/views/projects/startpage.html.erb
+++ b/app/views/projects/startpage.html.erb
@@ -10,10 +10,9 @@
 <br>
 <br>
 <br>
-<br>
-<br>
-<br>
-<br>
+<br><% if current_user %>
+<br><center><button> <font="60"><%= link_to "Take the test", new_score_path  %></font></button><center>
+<br><% end %>
 <br>
 <br>
 <br>
