--- a/app/views/scores/create.html.erb
+++ b/app/views/scores/create.html.erb
@@ -6,4 +6,4 @@
 <p> FT: <%= @score.agreeableness %><p>
 <p> JP: <%= @score.conscientiousness %><p>
 <% personality = Personality.where(mbti: @score.mbti) %>
-<p> Your new MBTI is: <%=  @score.mbti %><p>
+<p> Your new MBTI is: <%=  link_to @score.mbti, personality_path(@score.mbti) %><p>
