--- a/app/views/personalities/_personality.html.erb
+++ b/app/views/personalities/_personality.html.erb
@@ -1,10 +1,11 @@
+<%= image_tag personality.avatar, title: "#{personality.mbti} (#{personality.title})" %>
 
-<h2>Fun Facts about <%= @personality.mbti%>s</h2>
+<h2>Fun Facts about <%= personality.mbti%>s </h2>
 
 <ul>
-
-<%= @personality.description %>
-
+  <% personality.description.try(:each) do |line| %>
+    <li><%= line %></li>
+  <% end %>
 </ul>
 
 
@@ -12,11 +13,11 @@
 <%# end %>
 
 <h2> Working Style </h2>
-<%= @personality.at_work %>
+<%= personality.at_work %>
 
 <h2> As a Leader </h2>
-<%= @personality.as_leader %>
+<%= personality.as_leader %>
 
 <h2> As a Team Member </h2>
-<%= @personality.as_team %>
+<%= personality.as_team %>
 
