--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -4,8 +4,8 @@
     Start Date: <%= project.start_date.to_date %> <br>
     Location: <%= project.location %> <br>
     Founder: <%= project.user.name %> <br>
-    Number of Participants: <%= project.participants %><br>
-    Number of empty slots: <%= project.memberships.count - project.memberships.accepted.count%> <br>
+    Number of Participants: <%= (project.memberships.accepted.count + 1) %><br>
+    Number of empty slots: <%= project.participants - project.memberships.accepted.count%> <br>
     Skills required: <%= project.skills_required %></em></p>
 
     <% if (current_user && (current_user.is_pending_member?(project))) %>
